@@ -53,8 +53,7 @@ class Download(object):
         dwn_count = 1
         self._directory_prefix()
         for dwn in self.url:
-            # get file name from url and fix passing char '+'
-            self.file_name = dwn.split("/")[-1].replace("%2B", "+")
+            self._fix_file_name(dwn.split("/")[-1])
 
             if dwn.startswith("file:///"):
                 source_dir = dwn[7:-7].replace(slack_ver(), "")
@@ -81,6 +80,16 @@ class Download(object):
                                 self.path, self.file_name, dwn), shell=True)
             self._check_if_downloaded()
             dwn_count += 1
+
+    def _fix_file_name(self, file_name):
+        """Get file name from url and fix passing char '+'
+        """
+        if "%2b" in file_name:
+            self.file_name = file_name.replace("%2b", "+", 5)
+        elif "%2B" in file_name:
+            self.file_name = file_name.replace("%2B", "+", 5)
+        else:
+            self.file_name = file_name
 
     def _make_tarfile(self, output_filename, source_dir):
         """Create .tar.gz file
