@@ -1,6 +1,8 @@
 3.4.3 - 03/02/2019
 Updated:
 - Update gen_repos_files.sh to version 1.94
+Fixed:
+- Downloader to recognise the char +
 
 3.4.2 - 23/01/2019
 Fixed:
